[project]
name = "easy_prompting"
version = "1.0.0"
description = "A Python library for making LLM prompting easy."
authors = [{name = "Leonardo Mieschendahl", email = "miesschendahl.leonardo@gmail.com"}]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["dev.*"]