[project]
name = "easy_prompting"
version = "1.0.0"
description = "A Python library for simplifing languge model interactions."
authors = [{name = "Leonardo Mieschendahl"}]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["build*", "dist*", "dev*"]